# Link

./: .gitignore  README.md  algorithm_module.cp39-win_amd64.pyd  algorithm_module.pyd  main.py  requirements.txt  test_algorithm.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature.md
core_engine/algorithm/: algorithm.sln
core_engine/algorithm/algorithm/: CMakeLists.txt  algorithm.cpp  algorithm.vcxproj  algorithm.vcxproj.filters  bindings.cpp  check_weather_data.cpp  convert_weather_grid.cpp
core_engine/algorithm/algorithm/api/: ship_router.cpp  ship_router.h
core_engine/algorithm/algorithm/config/: dev_env.props
core_engine/algorithm/algorithm/data_loading/: gebco_loader.cpp  gebco_loader.h  grid_builder.cpp  grid_builder.h  gshhs_loader.cpp  gshhs_loader.h  weather_loader.cpp  weather_loader.h
core_engine/algorithm/algorithm/include/: ShipDynamicsAPI.h  common_path_utils.h  common_types.h  fetch_data.h  fuel_consumption_calculator.h  gebco_loader.h  geo_index_mapper.h  geo_utils.h  great_circle_route.h  gshhs_loader.h  less_fuel.h  navigable_grid.h  parse_weather_data.h  read_weather_data.h  ship_router.h  short_path.h  time_calculator.h  waypoint_snapper.h  weather_types.h
core_engine/algorithm/algorithm/pathfinding/: a_star_engine.cpp  a_star_engine.h  optimized_planner.cpp  optimized_planner.h  path_types.h  path_utils.cpp  path_utils.h  route_planner.h  shortest_planner.cpp  shortest_planner.h
core_engine/algorithm/algorithm/results/: route_results.h
core_engine/algorithm/algorithm/route_analysis/: waypoint_snapper.cpp  waypoint_snapper.h
core_engine/algorithm/algorithm/src/: ship_router.cpp
core_engine/algorithm/algorithm/src/calculators/: fuel_consumption_calculator.cpp
core_engine/algorithm/algorithm/src/common_path_utils/: JSON_maker.cpp  JSON_maker.h
core_engine/algorithm/algorithm/src/cost_models/: distance_cost_model.cpp  distance_cost_model.h  legacy_fuel_cost_model.cpp  legacy_fuel_cost_model.h  path_cost_model.h
core_engine/algorithm/algorithm/src/fetch_data/: common_types.cpp  fetch_data.cpp  fetch_dll.cpp  gebco_loader.cpp  gshhs_loader.cpp  parse_weather_data.cpp  read_weather_data.cpp
core_engine/algorithm/algorithm/src/great_circle_route/: great_circle_route.cpp
core_engine/algorithm/algorithm/src/grid/: navigable_grid.cpp  waypoint_snapper.cpp
core_engine/algorithm/algorithm/src/heuristics/: distance_heuristic.cpp  distance_heuristic.h  fuel_heuristic.cpp  fuel_heuristic.h  path_heuristic.h
core_engine/algorithm/algorithm/src/routing/: a_star_algorithm_optimized.cpp  a_star_algorithm_shortest.cpp  angle_limit.cpp  node_definitions.cpp  route_optimized.cpp  route_shortest.cpp
core_engine/algorithm/algorithm/test/: test_grid_snapper.cpp  test_main.cpp  test_ship_router.cpp
core_engine/algorithm/algorithm/types/: geo_types.cpp  geo_types.h  grid_types.cpp  grid_types.h  voyage_types.h  weather_types.h
core_engine/algorithm/algorithm/utils/: JSON_maker.cpp  JSON_maker.h  ShipDynamicsAPI.h  dll_loader.cpp  dll_loader.h  fuel_calculator.cpp  fuel_calculator.h  geo_calculations.cpp  geo_calculations.h  time_calculator.h  weather_interpolation.cpp  weather_interpolation.h
core_engine/algorithm/algorithm/x64/Release/: algorithm.ipdb
core_engine/algorithm/x64/Release/: algorithm_module.pyd
src/ui/: __init__.py  constants.py  main_window.py  side_tools.py
src/ui/map/: __init__.py  bridge.py  map.html  map_panel.py
src/ui/report/: __init__.py  report_panel.py  report_slots.py
src/ui/ui_data/: PortList.csv
src/ui/waypoint/: __init__.py  port_search_dialog.py  waypoint_panel.py  waypoint_slots.py
